updated css again to fix formating errors on tablet

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,4 @@
 html {
-	height: 100%;
 	font-size: 16px;
 }
 
@@ -8,13 +7,11 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 100%; 
 	font-size: 1rem;
 }
 .container {
   max-width: 1200px;
   width: 90%;
-  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -29,39 +26,48 @@ h3 {
 	font-weight: 700;
 }
 h1 {
-	font-size: 1.875rem;
+	font-size: 1.875em;
 }
 h2 {
-	font-size: 1.125rem;
+	font-size: 1.125em;
 }
 h3 {
-	font-size: .75rem;
+	font-size: .75em;
 }
 
 p {
-	font-size: .875rem;
+	font-size: .875em;
 	line-height: 21px;
-    padding: 0 30px;
+}
+
+ul {
+    margin: 0;
 }
 
 /*The widths are in a percentage!*/
 header {
-	margin: 0 auto;
-	justify-content: center;
-	align-content: center;
-  }
+	border-bottom: 3px solid #77a466;
+    text-align: center;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
 
 header h1 {
-	border-bottom: 3px solid #77a466;
 	margin: 0;
-	padding: 38px 0;
+    padding: 38px 20px 20px 20px; 
+    border-bottom: 3px solid #77a466; 
+    width: 100%;
 }
 header h1 span {
 	color: #77a466;
 }
 
 header nav {
-	padding: 46px 0;
+	padding: 20px 0;
+	width: 100%;
 }
 header nav ul {
 	margin: 0;
@@ -71,10 +77,8 @@ header nav ul li {
 	text-transform: uppercase;
 	font-weight: 700;
 	font-size: .875rem;
-	padding: 10px 10px;
-	align-content: center;
-	display: flex;
-	justify-content: center;
+	padding: 10px 0px;
+	list-style: none;
 }
 header nav ul li a{
 	text-decoration: none;
@@ -84,26 +88,22 @@ header nav ul li a{
 /*The widths are in a percentage!*/
 .top-section,
 .bottom-section {
-	margin: 0 auto;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	flex-direction: column;
+	flex-flow: row wrap;
 }
 
-.main-image {
-	height: auto;
-	justify-content: center;
-}
+
 .main-image img {
 	width: 100%;
 	border-bottom: 3px solid #77a466;
-	border-top: 3px solid #77a466;
 }
 
 .main-title {
 	height: auto;
 }
+
 .main-title h2 {
 	text-align: left;
 	padding: 5px 0;
@@ -111,8 +111,8 @@ header nav ul li a{
 }
 .main-title p {
 	padding: 0;
-	font-size: 16px;
-	line-height: 25px;
+	font-size: 1em;
+	line-height: 1.5625em;
 }
 
 .section-one,
@@ -120,28 +120,11 @@ header nav ul li a{
 .section-three {
 	width: 100%;
 	border-top: 1px solid #eee;
-	display: flex;
-	flex-wrap: wrap;
-}
-
-.section-one h3 {
-	padding: 10px 0;
-}
-
-.section-two {
-	border-left: 1px solid #eee;
-	border-right: 1px solid #eee;
-}
-
-.section-two h3,
-.section-three h3 {
-	padding: 10px 30px;
 }
 
 .menu {
 	list-style: none;
 	padding: 0;
-	font-size: 1rem;
 }
 .menu li {
 	padding: 10px 0;
@@ -150,138 +133,73 @@ header nav ul li a{
 
 .reviews {
 	color: #333;
-	font-size: 1rem;
-	line-height: 21px;
+	font-size: 1em;
+	line-height: 1.3125em;
 }
 
 .address {
-	font-size: 1rem;
-	line-height: 24px;
+	font-size: 1em;
+	line-height: 1.5em;
 }
 
 /*The widths are in a percentage!*/
 footer {
 	border-top: 3px solid #eee;
-	margin: 0 auto;
 	text-align: center;
+	width: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-flow: row wrap;
 }
 footer span {
 	font-family: 'Galada', cursive;
 	text-transform: lowercase;
 	color: #77a466;
-	font-size: .875rem;
+	font-size: .875em;
 }
 
-@media screen and (min-width: 786px) {
-  h1 {
-    font-size: 1.875rem;
-	
-  }
-
+@media screen and (min-width: 768px) {
   .bottom-section {
-	margin: 0 auto;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: row;
+	align-items: flex-start;
+	justify-content: space-between;
+	border-top: 1px solid #eee;
 }
 
   .section-one,
   .section-two,
   .section-three {
-	width: 33%;
-	border-top: 1px solid #eee;
-	display: flex;
-	flex-flow: row wrap;
-	height: auto;
+	flex-basis: 30%;
+	border-top: none;
 } 
 
-.section-one h3 {
-	padding: 10px 0;
-}
 
 .section-two {
 	border-left: 1px solid #eee;
 	border-right: 1px solid #eee;
+	padding: 0 20px;
 }
 
-.section-two h3,
-.section-three h3 {
-	padding: 10px 30px;
-}
-
-.menu {
-	list-style: none;
-	padding: 0;
-}
-.menu li {
-	padding: 10px 0;
-	color:#77a466;
-}
-
-.reviews {
-	color: #333;
-	font-size: 1rem;
-	line-height: 21px;
-}
-
-.address {
-	font-size: 1rem;
-	line-height: 24px;
-}
 }
  
 @media screen and (min-width: 1200px) {
-  h1 {
-    font-size: 1.875rem;
-  }
+	header {
+        justify-content: space-between;
+    }
 
-  .section-one,
-  .section-two,
-  .section-three {
-	width: 33%;
-	border-top: 1px solid #eee;
-	display: flex;
-	flex-flow: row wrap;
-	height: auto;
-} 
+    header h1 {
+        width: 30%;
+        padding: 0;
+        border-bottom: none;
+        text-align: left;
+    }
 
-.section-one h3 {
-	padding: 10px 0;
-}
+    header nav {
+        width: 40%;
+    }
 
-.section-two {
-	border-left: 1px solid #eee;
-	border-right: 1px solid #eee;
-}
-
-.section-two h3,
-.section-three h3 {
-	padding: 10px 30px;
-}
-
-.menu {
-	list-style: none;
-	padding: 0;
-}
-.menu li {
-	padding: 10px 0;
-	color:#77a466;
-}
-
-.reviews {
-	color: #333;
-	font-size: 16px;
-	line-height: 21px;
-}
-
-.address {
-	font-size: 16px;
-	line-height: 24px;
-}
-}
-
+    header nav ul {
+        display: flex;
+        justify-content: space-between;
+    }
 }
